--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <title>Magical Girl - Character Sheet</title>
-    <link rel="icon" type="image/png" href="../Icons/Heartgem.ico" />
-    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="icon" type="image/png" href="./Content/Icons/Heartgem.ico" />
+    <link rel="stylesheet" href="./Content/css/main.css" />
 </head>
 <body class="background" style="overflow-x: hidden;">
   <div class="main-sheet">
@@ -24,7 +24,7 @@
           </div>
 
           <div class="magical-icon">
-            <img id="role-icon" onclick="changeRole()" src="../Images/NoRole.png" alt="-" title="Sin Especialización" />
+            <img id="role-icon" onclick="changeRole()" src="./Content/Images/NoRole.png" alt="-" title="Sin Especialización" />
           </div>
         </div>
 
@@ -62,22 +62,22 @@
               <td>
                 <div style="width: fit-content;">
                   <div class="Frame">
-                    <img id="Head-slot-img" onclick="openModal('Head')" src="../Icons/Inventario/Head-Slot.png" class="Inner-Frame" />
+                    <img id="Head-slot-img" onclick="openModal('Head')" src="./Content/Icons/Inventario/Head-Slot.png" class="Inner-Frame" />
                   </div>
                   <div class="Frame">
-                    <img id="Shoulder-slot-img" onclick="openModal('Shoulder')" src="../Icons/Inventario/Shoulder-Slot.png" class="Inner-Frame" />
+                    <img id="Shoulder-slot-img" onclick="openModal('Shoulder')" src="./Content/Icons/Inventario/Shoulder-Slot.png" class="Inner-Frame" />
                   </div>
                   <div class="Frame">
-                    <img id="Cloak-slot-img" onclick="openModal('Cloak')" src="../Icons/Inventario/Cloak-Slot.png" class="Inner-Frame" />
+                    <img id="Cloak-slot-img" onclick="openModal('Cloak')" src="./Content/Icons/Inventario/Cloak-Slot.png" class="Inner-Frame" />
                   </div>
                   <div class="Frame">
-                    <img id="Torso-slot-img" onclick="openModal('Torso')" src="../Icons/Inventario/Torso-Slot.png" class="Inner-Frame" />
+                    <img id="Torso-slot-img" onclick="openModal('Torso')" src="./Content/Icons/Inventario/Torso-Slot.png" class="Inner-Frame" />
                   </div>
                   <div class="Frame">
-                    <img id="Legs-slot-img" onclick="openModal('Legs')" src="../Icons/Inventario/Legs-Slot.png" class="Inner-Frame" />
+                    <img id="Legs-slot-img" onclick="openModal('Legs')" src="./Content/Icons/Inventario/Legs-Slot.png" class="Inner-Frame" />
                   </div>
                   <div class="Frame">
-                    <img id="Shoes-slot-img" onclick="openModal('Shoes')" src="../Icons/Inventario/Shoes-Slot.png" class="Inner-Frame" />
+                    <img id="Shoes-slot-img" onclick="openModal('Shoes')" src="./Content/Icons/Inventario/Shoes-Slot.png" class="Inner-Frame" />
                   </div>
                 </div>
               </td>
@@ -85,11 +85,11 @@
               <!-- Main Photo -->
               <td>
                 <div>
-                  <img title="¡Transformación!" class="Floating-Button" onclick="Transformacion()" src="../Images/Transformation_Button_245x245.png" />
+                  <img title="¡Transformación!" class="Floating-Button" onclick="Transformacion()" src="./Content/Images/Transformation_Button_245x245.png" />
                 </div>
                 <div style="width: fit-content;">
                   <div class="Photo-Frame">
-                    <img id="Magic-Girl-Photo" title="Una Chica Normal" src="../../Outfit - Normal.png" class="Photo"/> 
+                    <img id="Magic-Girl-Photo" title="Una Chica Normal" src="./Outfit - Normal.png" class="Photo"/> 
                   </div>
                 </div>
               </td>
@@ -98,22 +98,22 @@
               <td>
                 <div style="width: fit-content;">
                   <div class="Frame">
-                    <img id="Shadow-slot-img" onclick="openModal('Shadow')" src="../Icons/Inventario/Shadow-Slot.png" class="Inner-Frame" />
+                    <img id="Shadow-slot-img" onclick="openModal('Shadow')" src="./Content/Icons/Inventario/Shadow-Slot.png" class="Inner-Frame" />
                   </div>
                   <div class="Frame">
-                    <img id="Bag1-slot-img" onclick="openModal('Bag1')" src="../Icons/Inventario/Bag1-Slot.png" class="Inner-Frame" />
+                    <img id="Bag1-slot-img" onclick="openModal('Bag1')" src="./Content/Icons/Inventario/Bag1-Slot.png" class="Inner-Frame" />
                   </div>
                   <div class="Frame">
-                    <img id="Bag2-slot-img" onclick="openModal('Bag2')" src="../Icons/Inventario/Bag2-Slot.png" class="Inner-Frame" />
+                    <img id="Bag2-slot-img" onclick="openModal('Bag2')" src="./Content/Icons/Inventario/Bag2-Slot.png" class="Inner-Frame" />
                   </div>
                   <div class="Frame">
-                    <img id="Bag3-slot-img" onclick="openModal('Bag3')" src="../Icons/Inventario/Bag3-Slot.png" class="Inner-Frame" />
+                    <img id="Bag3-slot-img" onclick="openModal('Bag3')" src="./Content/Icons/Inventario/Bag3-Slot.png" class="Inner-Frame" />
                   </div>
                   <div class="Frame">
-                    <img id="Hand1-slot-img" onclick="openModal('Hand1')" src="../Icons/Inventario/Hand1-Slot.png" class="Inner-Frame" />
+                    <img id="Hand1-slot-img" onclick="openModal('Hand1')" src="./Content/Icons/Inventario/Hand1-Slot.png" class="Inner-Frame" />
                   </div>
                   <div class="Frame">
-                    <img id="Hand2-slot-img" onclick="openModal('Hand2')" src="../Icons/Inventario/Hand2-Slot.png" class="Inner-Frame" />
+                    <img id="Hand2-slot-img" onclick="openModal('Hand2')" src="./Content/Icons/Inventario/Hand2-Slot.png" class="Inner-Frame" />
                   </div>
                 </div>
               </td>
@@ -451,7 +451,7 @@
                 </table>
               </div>
               <div class="carousel-item carousel-stats" style="height: fit-content; align-self: center;">
-                <img id="Gem" class="gema" onclick="gemBreak()" src="../Images/Gema 5.png">
+                <img id="Gem" class="gema" onclick="gemBreak()" src="./Content/Images/Gema 5.png">
                 <label id="Gem-Text">Mira, ¡eres tú!</label>
               </div>
             </div>
@@ -617,7 +617,7 @@ Texto de ambientación."></textarea>
 
 
   <input type="file" id="fileInput" accept="image/*" style="display: none;" />
-  <script src="../scripts/main.js"></script>
-  <script src="../scripts/db.js"></script>
+  <script src="./Content/scripts/main.js"></script>
+  <script src="./Content/scripts/db.js"></script>
 </body>
 </html>
